# ml-rubiks-solvers

./: .env.example  .gitignore  .pylintrc  README.md  RENDER_PLAN.md  clear_dgx.sh  pyproject.toml  run.sh  setup.sh
.github/workflows/: pylint.yml
requirements/: base.txt  dev.txt  ml.txt  torch.txt  viz.txt
rubiks_solve/core/: __init__.py  base.py  cube_2x2.py  cube_3x3.py  cube_4x4.py  cube_5x5.py  cube_nnn.py  megaminx.py  moves.py  skewb_ultimate.py  validator.py
rubiks_solve/encoding/: __init__.py  base.py  cubie.py  one_hot.py  registry.py
rubiks_solve/env/: __init__.py  base_env.py  cube_env.py  reward.py  wrappers.py
rubiks_solve/pipeline/: __init__.py  chain.py  ensemble.py  router.py
rubiks_solve/solvers/: __init__.py  base.py
rubiks_solve/solvers/cnn/: __init__.py  adi_trainer.py  model.py  model_torch.py  solver.py  trainer.py  trainer_torch.py
rubiks_solve/solvers/dqn/: __init__.py  model.py  model_torch.py  replay_buffer.py  solver.py  (+2 more)
rubiks_solve/training/: __init__.py  checkpoint.py  curriculum.py  data_gen.py  metrics.py  trainer_base.py
rubiks_solve/utils/: __init__.py  config.py  logging_config.py  rng.py  timer.py
rubiks_solve/visualization/: __init__.py  comparison_plots.py  cube_3d.py  solution_replay.py  training_plots.py
scripts/: benchmark.py  remote_train.py  solve.py  train.py  train_adi_ida.py  train_all.py  train_torch.py  visualize.py
tests/: conftest.py
tests/e2e/: test_e2e_2x2.py  test_e2e_3x3.py  test_e2e_4x4.py  test_e2e_5x5.py  test_e2e_megaminx.py  test_e2e_pipeline.py
ui/: app.py
ui/static/: index.html
(+41 files in other folders)
