[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rubiks-solve"
version = "0.1.0"
description = "Multi-algorithm ML solver for Rubik's cubes and Megaminx"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pydantic>=2.6",
    "mlx>=0.16",
    "mlx-data>=0.0.5",
    "gymnasium>=0.29",
    "deap>=1.4",
    "matplotlib>=3.8",
    "pandas>=2.2",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "mypy>=1.9",
    "black>=24.3",
    "ruff>=0.3",
]
ui = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
rubiks-train = "scripts.train:main"
rubiks-train-all = "scripts.train_all:main"
rubiks-solve = "scripts.solve:main"
rubiks-benchmark = "scripts.benchmark:main"
rubiks-viz = "scripts.visualize:main"
rubiks-ui = "ui.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rubiks_solve*", "scripts*", "ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["rubiks_solve"]
omit = ["tests/*", "scripts/*", "notebooks/*"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
